# dtcc-3dbag-roofer

./: .gitignore  .gitmodules  CMakeLists.txt  demo.py  hello.py  pyproject.toml
dtcc_3dbag_roofer/: __init__.py
tests/: test_roofer.py
